--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "openshift-ansible"]
 path = openshift-ansible
-url = https://github.com/openshift/openshift-ansible
+url = git@https://github.com/openshift/openshift-ansible.git
